--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta",
+    "cors": "^2.8.4",
     "css-loader": "^0.28.5",
+    "express": "^4.15.5",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.18.2",
@@ -33,6 +36,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2"
   }
 }
